채팅 코드 개선